# SecretWarehouse

./: .gitignore  LICENSE  README.md  build_linux.sh  build_mac.sh  build_windows.ps1  package-lock.json
.github/workflows/: ci.yml  release.yml
.workbuddy/memory/: 2026-05-11.md
dist_linux/env/: tauri.conf.json
src/: App.tsx  index.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  main.rs  models.rs
src/components/: MasterPassword.tsx  QuickAddWindow.tsx  QuickSearch.tsx  QuickSearchWindow.tsx  SearchBar.tsx  SecretDetail.tsx  SecretForm.tsx  SecretList.tsx  Settings.tsx  Sidebar.tsx
src/constants/: icons.ts
src/stores/: useStore.ts
src/types/: index.ts
