[package]
name = "secret-warehouse"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["clipboard-all", "dialog-open", "dialog-save", "fs-write-file", "shell-open", "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
arboard = "3"
indexmap = { version = "2", features = ["serde"] }
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
